log
Fri 10 May 2024 01:05:00 AM UTC: 
 tests:  1|8
total_score: 0/70
b1d878e
Fri 10 May 2024 01:07:50 AM UTC: 
 treemap.c | 40 ++++++++++++++++++++++++++--------------
 1 file changed, 26 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:77:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   77 |     return NULL;
      |            ^~~~
treemap.c:76:6: note: declared here
   76 | void removeNode(TreeMap * tree, TreeNode* node) {
      |      ^~~~~~~~~~
treemap.c: In function ‘eraseTreeMap’:
treemap.c:81:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   81 |     return NULL;
      |            ^~~~
treemap.c:80:6: note: declared here
   80 | void eraseTreeMap(TreeMap * tree, void* key){
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8722620
Fri 10 May 2024 01:08:12 AM UTC: 
 treemap.c | 37 +++++++++++--------------------------
 1 file changed, 11 insertions(+), 26 deletions(-)
 tests:  1|8
total_score: 0/70
79ddb40
